# scacchiera

./: .gitignore  CMakeLists.txt  README.md  README.txt  computer_vs_computer_example.txt  player_vs_computer_example.txt
include/: Board.h  Controller.h  Coordinate.h  King_Piece.h  Movement.h  Piece.h  Player.h  Utilities.h
include/pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h  king_piece.h  knight_piece.h  rook_piece.h
src/: Coordinate.cpp  King_Piece.cpp  Movement.cpp  Player.cpp  Utilities.cpp  board.cpp  controller.cpp  coordinate.cpp  movement.cpp  piece.cpp  player.cpp  utilities.cpp
src/pieces/: bishop.cpp  king.cpp  king_piece.cpp  knight.cpp  knight_piece.cpp  pawn.cpp  queen.cpp  rook.cpp  rook_piece.cpp
src/targets/: replay.cpp  scacchiera.cpp  test.cpp
